Updated build command to use meson cross files and subprojects

--- a/meson.build
+++ b/meson.build
@@ -13,18 +13,25 @@ project('STMatrix',
 
 # option('peripherals', type : 'array', choices : ['adc', 'bus', 'comp', 'cordic', 'cortex', 'crc', 'crs', 'dac', 'dma', 'dmamux', 'exti', 'fmac', 'fmc', 'gpio', 'hrtim', 'i2c', 'iwdg', 'lptim', 'lpuart', 'opamp', 'pwr', 'rcc', 'rng', 'rtc', 'spi', 'system', 'tim', 'ucpd', 'usart', 'usb', 'utils', 'wwdg'], value : [])
 
+add_project_arguments('-DUSE_FULL_LL_DRIVER', language: 'c')
+add_project_arguments('-DSTM32G474xx', language: 'c')
 stm_sdk_options  = [
-  'family=g4',
-  'chip=stm32g474',
-  'peripherals=[gpio, adc]'
+  'chip=STM32G474xx',
+  'peripherals=gpio,adc'
   ]
-stm_sdk_project = subproject('sdk')
-stm_sdk = dependency('stm_sdk')
+stm_sdk_project = subproject('sdk', default_options: stm_sdk_options)
+stm_sdk = stm_sdk_project.get_variable('stm_sdk_dep')
 
 freertos_options = [
+  'arch=ARM_CM4F',
   'memmang=heap_2',
   'cpu_clock_hz=64000000',
   'tick_rate_hz=1000',
+  'total_heap_size=10000',
+  'support_static_allocation=true',
+  'use_malloc_failed_hook=false',
+  'check_for_stack_overflow=false',
+  'use_timers=true'
   ]
 
 freertos_project = subproject('FreeRTOS',
@@ -34,6 +41,12 @@ freertos = dependency('freertos')
 
 # Linker settings
 link_file = files(['linker/STM32G474RETx_FLASH.ld'])
+
+linker_script_flags = ['-T' + '../linker/STM32G474RETx_FLASH.ld']
+
+linker_script_flags += '-Wl,-Map,output.map'
+
+
 subdir('src')
 # subdir('test')
 
